Initialize jdk.internal.jrtfs.SystemImage at runtime if JRTFS is enabled